fixed fields / addresses
